# JProject

./: .gitmodules  README.md  build.gradle  deps.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/wang/julis/jproject/: ExampleInstrumentedTest.java
app/src/androidTest/java/wang/julis/poster/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/func/: EGLRender.cpp  EGLRender.h  MyGLRenderContext.cpp  MyGLRenderContext.h
app/src/main/cpp/sample/: BasicLightingSample.cpp  BasicLightingSample.h  BlendingSample.cpp  BlendingSample.h  CoordSystemSample.cpp  CoordSystemSample.h  DepthTestingSample.cpp  FBOSample.cpp  GLSampleBase.h  Instancing3DSample.cpp  Instancing3DSample.h  InstancingSample.h  NV21TextureMapSample.cpp  ParticlesSample.cpp  SkyBoxSample.cpp  StencilTestingSample.cpp  StencilTestingSample.h  TextureMapSample.cpp  TextureMapSample.h  TriangleSample.cpp  VaoSample.cpp  VaoSample.h
app/src/main/cpp/shader/: base_light_v.glsl  net.glsl
app/src/main/cpp/util/: GLUtils.cpp  GLUtils.h
app/src/main/java/wang/julis/jproject/: ListAdapter.java  ListHolder.java  ListModel.java  MainActivity.java  MainApplication.java  MainApplication.kt  PosterGeneratorActivity.java
app/src/main/java/wang/julis/poster/: PosterGeneratorActivity.java
app/src/main/res/anim/: alpha_anim.xml  combian_anim.xml  rotate_accelerate_decelerate_interpolator_anim.xml  rotate_accelerate_interpolator_anim.xml  rotate_anim.xml  rotate_anticipate_interpolator_anim.xml  rotate_anticipate_overshoot_interpolator_anim.xml  rotate_bounce_interpolator_anim.xml  rotate_cycle_interpolator_anim.xml  rotate_decelerate_interpolator_anim.xml  rotate_linear_interpolator_in_anim.xml  rotate_overshoot_interpolator_anim.xml  scale_anim.xml
app/src/main/res/layout/: activity_animation.xml  activity_animator_set.xml  activity_article_generator.xml  activity_audio_recorder.xml  activity_binder_test.xml  activity_camera_surface_view.xml  activity_camera_texture_view.xml  activity_character_decoding.xml  activity_draw_image.xml  activity_gl_render.xml  activity_glsurfaceview.xml  activity_h264.xml  activity_main.xml  activity_media.xml  activity_media_muxer.xml  activity_media_projection.xml  activity_object_animator.xml  activity_okhttp_test.xml  activity_post_generator.xml  activity_rect_visiable.xml  activity_screen_record.xml  activity_simple_pag_activity.xml  activity_test.xml  activity_value_animator.xml  layout_article_poster.xml  layout_list_item.xml  layout_poster.xml
app/src/main/res/menu/: menu_egl.xml  menu_main.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/test/java/wang/julis/jproject/: ExampleUnitTest.java
app/src/test/java/wang/julis/poster/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
kotlinLearn/: build.gradle
kotlinLearn/src/androidTest/java/julis/wang/kotlinlearn/: ExampleInstrumentedTest.kt
kotlinLearn/src/main/: AndroidManifest.xml
kotlinLearn/src/main/java/julis/wang/kotlinlearn/: KotlinMainActivity.kt  MusicLibraryPlaceHolderAdapter.kt  RecyclerViewActivity.kt
kotlinLearn/src/main/res/layout/: activity_kotlin_test.xml  activity_main.xml  activity_recycler_view_test.xml  activity_test.xml  activity_view_model.xml  fragment_one.xml  fragment_two.xml  layout_item_music_placeholder.xml  layout_item_music_title.xml  layout_item_music_title_placeholder.xml
kotlinLearn/src/main/res/values/: attrs.xml  colors.xml  dimens.xml  ids.xml  strings.xml
kotlinLearn/src/test/java/julis/wang/kotlinlearn/: ExampleUnitTest.kt
learnCpp/: build.gradle
learnCpp/src/main/: AndroidManifest.xml
learnCpp/src/main/cpp/: CMakeLists.txt  bitmap_operation.cpp  cache_filed_and_method.cpp  learncpp.cpp  thread_operation.cpp  thread_operation.h
learnCpp/src/main/cpp/android/: hello-jni.cpp  jni_callback.cpp  nativity_acitivity.cpp
learnCpp/src/main/cpp/android/mediacodec/: looper.cpp  looper.h  native-codec-jni.cpp
learnCpp/src/main/cpp/common/: commonutil.cpp  logutil.h
learnCpp/src/main/cpp/native/: design_ops.cpp  design_ops.h
learnCpp/src/main/cpp/webp/: Engine.cpp  Engine.h  webp_decode.cpp  webp_decode.h  webp_view.cpp
learnCpp/src/main/res/layout/: acitivity_jni_callback.xml  activity_bitmap_operation.xml  activity_design.xml  activity_method.xml  activity_native_mediacodec.xml
learnCpp/src/main/res/values/: strings.xml
learnopengl/: build.gradle
learnopengl/src/main/: AndroidManifest.xml
learnopengl/src/main/cpp/: CMakeLists.txt  native-lib.cpp
learnopengl/src/main/cpp/func/: MyGLRenderContext.cpp
learnopengl/src/main/cpp/sample/: BasicLightingSample.cpp  BlendingSample.cpp  CoordSystemSample.cpp  DepthTestingSample.cpp  FBOSample.cpp  FBOSample.h  GLSampleBase.h  GLTransitionExample.cpp  GLTransitionExample.h  Instancing3DSample.cpp  InstancingSample.cpp  Model3DSample.cpp  Model3DSample.h  MultiLightsSample.cpp  MultiLightsSample.h  NV21TextureMapSample.h  PBOSample.cpp  PBOSample.h  ParticlesSample.cpp  ParticlesSample.h  SkyBoxSample.cpp  SkyBoxSample.h  TextRenderSample.cpp  TextRenderSample.h  TextureBufferSample.h  TextureBuffferSample.cpp  TextureMapSample.cpp  TransformFeedbackSample.cpp  TransformFeedbackSample.h  TriangleSample.cpp  TriangleSample.h  VaoSample.cpp
learnopengl/src/main/cpp/shader/: change_one.glsl  change_two.glsl  edg.glsl  enlarge.glsl  mosaic.glsl  rotate.glsl  transition_1.glsl
learnopengl/src/main/cpp/util/: ImageDef.cpp  ImageDef.h  LogUtil.h
learnopengl/src/main/res/drawable/: shape_bg_gold_stoke.xml  shape_bg_red.xml
learnopengl/src/main/res/layout/: activity_egl.xml  activity_gl_render_texture.xml  activity_list.xml  activity_opengl_list.xml  layout_list_item.xml
learnopengl/src/main/res/raw/: point_fragment_shader.glsl
learnopengl/src/main/res/values/: strings.xml
router/compiler/: build.gradle
router/lib_router/: build.gradle
router/lib_router/src/main/: AndroidManifest.xml
script/: get_hybrid_class.gradle
(+257 files in other folders)
